force-app/main/default/objects/Data_Loader_Notes__c/Data_Loader_Notes__c.object-meta.xml
<CustomObject>
    <description>Temporary object to hold notes for processing before inserting.</description>
    <label>Data Loader Notes</label>
    <nameField>
        <label>Data Loader Notes</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Loader Notes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>