force-app/main/default/objects/Data_Loader_Notes__c/fields/About__c.field-meta.xml
<CustomField>
    <fullName>About__c</fullName>
    <label>About</label>
    <length>255</length>
    <type>Text</type>
</CustomField>