force-app/main/default/objects/Data_Loader_Notes__c/fields/Author_ID__c.field-meta.xml
<CustomField>
    <fullName>Author_ID__c</fullName>
    <label>Author ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>