force-app/main/default/objects/Data_Loader_Notes__c/fields/commentingPersonID__c.field-meta.xml
<CustomField>
    <fullName>commentingPersonID__c</fullName>
    <label>commentingPersonID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>