force-app/main/default/objects/Data_Loader_Notes__c/fields/Date_Added__c.field-meta.xml
<CustomField>
    <fullName>Date_Added__c</fullName>
    <label>Date Added</label>
    <length>255</length>
    <type>Text</type>
</CustomField>