force-app/main/default/objects/Data_Loader_Notes__c/fields/Error__c.field-meta.xml
<CustomField>
    <fullName>Error__c</fullName>
    <label>Error</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>