force-app/main/default/objects/Data_Loader_Notes__c/fields/Exists__c.field-meta.xml
<CustomField>
    <fullName>Exists__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Related Contact Exists</description>
    <inlineHelpText>Related Contact Exists</inlineHelpText>
    <label>Exists</label>
    <type>Checkbox</type>
</CustomField>