force-app/main/default/objects/Data_Loader_Notes__c/fields/Notes_Status__c.field-meta.xml
<CustomField>
    <fullName>Notes_Status__c</fullName>
    <label>Notes Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>