force-app/main/default/objects/Data_Loader_Notes__c/fields/PersonID__c.field-meta.xml
<CustomField>
    <fullName>PersonID__c</fullName>
    <label>PersonID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>