force-app/main/default/objects/Data_Loader_Notes__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Action__c</columns>
    <columns>Comments__c</columns>
    <columns>PersonID__c</columns>
    <columns>About__c</columns>
    <columns>commentingPersonID__c</columns>
    <columns>Author__c</columns>
    <columns>Date_Added__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>